--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,7 @@
 <!--  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">-->
 <!--  <link rel="icon" href="favicon.ico" type="image/x-icon">-->
 
-  <title>binokor_web</title>
+  <title>ООО "DSK Binokor"</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
